# apit

./: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  AtomicParser.py  README.md  TODO.md  apit.py  iTunesMusic.py  pyproject.toml  run.py  setup.cfg  setup.py  tox.ini
.github/workflows/: pre-commit.yml  python-package.yml  tests.yml
apit/: AtomicParser.py  MusicData.py  __init__.py
src/apit/: action.py  action_reporter.py  album.py  atomic_parser.py  cache.py  cli.py  cli_options.py  cmd.py  color.py  command.py  command_result.py  console.py  debug_helper.py  defaults.py  error.py  errors.py  exit_code.py  factory.py  file_handling.py  file_tags.py  list_utils.py  logger.py  logging.py  main.py  metadata_cache.py  metadata_store.py  mime_type.py  musicdata.py  package_utils.py  readable_names.py  registry_mixin.py  report.py  report_action.py  sort.py  store_data_parser.py  str_enum.py  string_utils.py  tag_id.py  tagged_value.py  types.py  (+3 more)
src/apit/actions/: __init__.py  base.py  read.py  tag.py
src/apit/command/: show.py  tag.py
src/apit/commands/: __init__.py  base.py  command.py  common_cli_parser_arguments.py
src/apit/commands/list/: __init__.py  action.py  cli_parser.py  command.py  main.py  reporter.py
src/apit/commands/show/: action.py  cli_parser.py  command.py  command_reporter.py  main.py  reporter.py
src/apit/commands/show/reporting/: file_tags.py  named_tag_sections.py  readable_names.py  tag_id_description.py  tag_ordering.py  tagged_value.py
src/apit/commands/show/reporting/mp4/: mp4_tag.py
src/apit/commands/tag/: __init__.py  action.py  cli_parser.py  command.py  command_reporter.py  main.py  reporter.py
src/apit/file_type/: __init__.py  audio_file.py
src/apit/file_type/mp3/: __init__.py  mp3_tag.py  read.py
src/apit/file_type/mp4/: __init__.py  update.py
src/apit/file_types/: __init__.py  audio_file.py
src/apit/file_types/mp3/: __init__.py  constants.py  mp3_tag.py  read.py  to_file_tags.py  update.py
src/apit/file_types/mp4/: __init__.py  constants.py  mp4_tag.py  read.py  update.py
src/apit/metadata/: __init__.py  album.py  artwork.py  song.py
src/apit/metadata_reporter/: metadata_reporter.py  named_tag_sections.py
src/apit/reporting/: summary.py  table.py  tags_report.py
src/apit/store/: connection.py  constants.py  data_parser.py  download.py
src/apit/tagging/: __init__.py  format.py  format_registry.py  read.py  update.py
src/apit/tagging/mp3/: __init__.py  constants.py  mp3_tag.py  update.py
src/apit/tagging/mp4/: __init__.py  constants.py  mp4_tag.py  read.py  to_file_tags.py  update.py
tests/: conftest.py  metadata.js  test_action.py  test_action_read.py  test_action_tag.py  test_album.py  test_atomic_parser.py  test_atomic_parser_update.py  test_atomicparser.py  test_cli.py  test_cmd.py  test_color.py  test_command.py  test_constants.py  test_data_parser.py  test_file_handling.py  test_file_tags.py  test_list_utils.py  test_logger.py  test_metadata.py  test_metadata_cache.py  test_metadata_store.py  test_mime_type.py  test_musicdata.py  test_report.py  test_report_action.py  test_show.py  test_sort.py  test_store_connection.py  test_string_utils.py  test_update.py  test_url_utils.py  test_utils.py
tests/commands/list/: test_action.py  test_reporter.py
tests/commands/show/: test_action.py  test_reporter.py
tests/commands/tag/: test_action.py  test_reporter.py
tests/fixtures/: metadata.json
tests/integration/: test_store_download.py
tests/store/: test_data_parser.py  test_download.py
tests/tagging/: test_read.py  test_update.py
tests/tagging/mp4/: test_read.py  test_update.py  test_update_original_file.py
