[project]
name = "apit"
version = "0.11.0"
description = "apit allows batch tagging .mp3 and .m4a (AAC and ALAC) file metadata tags using data from Apple Music/iTunes Store."
readme = "README.md"
requires-python = ">=3.10"
keywords = ["metadata", "tagging", "mp3", "mp4", "m4a", "aac", "alac", "itunes", "apple-music"]
authors = [{name = "Waldemar Schott"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
]
dependencies = [
    "mutagen",
    "beautifultable>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
    "pytest",
    "mypy",
    "flake8",
    "black",
]

[project.urls]
homepage = "https://github.com/wschott/apit"

[project.scripts]
apit = "apit.cli:cli"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
branch = true
parallel = true
source = ["apit"]

[tool.coverage.paths]
source = [
    "src/apit",
    ".tox/*/lib/python*/site-packages/apit",
]

[tool.coverage.report]
show_missing = true


[tool.mypy] # TODO
python_version = "3.10"
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "mutagen.*",
    "beautifultable.*",
]
ignore_missing_imports = true
