[project]
name = "apit"
version = "0.11.0"
description = "apit allows batch tagging .mp3 and .m4a (AAC and ALAC) file metadata tags using data from Apple Music/iTunes Store."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["metadata", "tagging", "mp3", "mp4", "m4a", "aac", "alac", "itunes", "apple-music"]
authors = [{name = "Waldemar Schott"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping",
]
dependencies = [
    "mutagen",
    "rich>=12.6.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox",
    "pytest",
]

[project.urls]
homepage = "https://github.com/wschott/apit"

[project.scripts]
apit = "apit.cli:cli"

[project.entry-points.'apit.file_types']
mp3 = 'apit.file_types.mp3:Mp3File'
m4a = 'apit.file_types.mp4:Mp4File'

[project.entry-points.'apit.commands']
list = 'apit.commands.list:ListCommand'
tag = 'apit.commands.tag:TagCommand'

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[tool.coverage.run]
branch = true
parallel = true
source = ["apit"]

[tool.coverage.paths]
source = [
    "src/apit",
    ".tox/*/lib/python*/site-packages/apit",
]

[tool.coverage.report]
show_missing = true


[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
    "TRY", # tryceratops
    "S",   # bandit
    "RUF", # Ruff
]
ignore = ["E501", "B904", "TRY003", "I001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy] # TODO
python_version = "3.11"
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "mutagen.*",
    "rich.*",
]
ignore_missing_imports = true
