[metadata]
name = apit
version = 0.8.1
author = Waldemar Schott
url = https://github.com/wschott/apit
description = apit allows batch tagging .m4a (AAC and ALAC) file metadata tags using data from Apple Music/iTunes Store.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = metadata, tagging, mp4, m4a, aac, alac, itunes, apple-music
classifiers =
    Programming Language :: Python :: 3
    Environment :: Console
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: CD Audio :: CD Ripping

[options]
python_requires = >=3.10
package_dir =
    = src
packages = find:
install_requires =
    mutagen

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    apit = apit.cli:cli

[options.extras_require]
dev =
    pre-commit
    tox
    pytest
    mypy
    flake8
    black


[coverage:run]
branch = true
parallel = true
source =
    apit

[coverage:paths]
source =
    src/apit
    .tox/*/lib/python*/site-packages/apit

[coverage:report]
show_missing = true


[flake8]
max-line-length = 88
extend-select = B950
extend-ignore = E203, E501

[mypy] # TODO
python_version = 3.10
no_implicit_optional = true

[mypy-pytest.*]
ignore_missing_imports = true

[mypy-mutagen.*]
ignore_missing_imports = true
